# modern-data

./: .boring  .gitignore  2012-08-09-chatlog.txt  Main.hs  Modern Data.html  TMC.cabal  modern-data.cabal  notes.txt  notes2.txt  notes3.txt
C/: Buildfile  Makefile  Makefile.old  TODO.txt  build  context.c  evaluation.c  example-canonical.c  hash.c  hash.h  input.modern-explicatory  internal.h  keywords.h  library.c  make-keywords  memory.c  modern.h  node-canonical.c  node-get.c  node-make.c  node-set.c  notes.txt  predefined.c  processor-explicatory.c  test-canonical  test-canonical.c  test-in.c  test-main.c  test-node.c  test-out.c  test.h  vfile-stdio.c
C/examples/: canonical.c
C/tests/: Buildfile  canonical.c  input.modern-explicatory  main.c
C/tools/: Buildfile
C/tools/make-keywords/: Buildfile  make-keywords.c
Data/: Modern.hs
Data/Modern/: Binary.hs  Context.hs  Deserialization.hs  Documentation.hs  Explicatory.hs  Hash.hs  Initial.hs  Serialization.hs  Types.hs
Documentation/: Diagram 1.eps  Diagram 2.eps  Diagrams.ai  Modern Data.epub  Modern Data.md
Documentation/HTML/: content.json
Documentation/Modern Data.scriv/: Modern Data.scrivx
Documentation/Modern Data.scriv/Files/: binder.autosave  binder.backup  search.indexes
Documentation/Modern Data.scriv/Files/Docs/: 10.rtf  100.rtf  1001.links  1001.rtf  1005.rtf  1008.rtf  1016.rtf  1019.rtf  102.rtf  1022.rtf  1025.rtf  1028.rtf  103.rtf  1031.rtf  1034.rtf  1037.rtf  104.rtf  1040.rtf  1043.rtf  1046.rtf  1049.rtf  1052.rtf  1055.rtf  1058.rtf  106.rtf  1061.rtf  1064.rtf  1067.rtf  1070.rtf  1073.rtf  1077.rtf  1080.rtf  1082.rtf  1084.rtf  1090.rtf  1095.rtf  1098.rtf  11.rtf  110.rtf  1101.rtf  (+2016 more)
Documentation/Modern Data.scriv/Files/ProjectNotes/: index.xml
Documentation/Modern Data.scriv/QuickLook/: Preview.html
Documentation/Modern Data.scriv/Settings/: compile.plist  ui.plist
Documentation/html/: index.html
Graphics/: Logo.ai
Haskell/: Main.hs  modern-data.cabal
Haskell/Data/: Modern.hs
Haskell/Data/Modern/: Binary.hs  Documentation.hs  Initial.hs  Serialization.hs
Modern Data.scriv/: Modern Data.scrivx
Modern Data.scriv/Files/: ._binder.autosave  ._search.indexes  binder.autosave  binder.backup  search.indexes
Modern Data.scriv/Files/Docs/: ._102.rtf  ._104.rtf  ._107.rtf  ._11.rtf  ._128.rtf  ._129.rtf  ._130.rtf  ._131.rtf  ._132.rtf  ._134.rtf  ._141.rtf  ._146.rtf  ._161.rtf  ._162.rtf  ._182.rtf  ._187.rtf  ._190.rtf  ._194.rtf  ._209.rtf  ._214.rtf  ._219.rtf  ._235.rtf  ._25.rtf  ._260.rtf  ._261.rtf  ._262.rtf  ._263.rtf  ._265.rtf  ._266.rtf  ._267.rtf  ._269.rtf  ._270.rtf  ._271.rtf  ._273.rtf  ._275.rtf  ._32.rtf  ._55.rtf  ._64.rtf  ._70.rtf  ._9.rtf  (+283 more)
Modern Data.scriv/Files/ProjectNotes/: ._index.xml
Modern Data.scriv/QuickLook/: ._Preview.html  Preview.html
Modern Data.scriv/Settings/: compile.plist  ui.plist
Tools/DocGen/: docgen.cabal
Tools/DocGen/Data/: index.css  index.html  index.js
Tools/DocGen/Haskell/: .Main.hs.swp  Main.hs
