name: TMC
version: 1.0
cabal-version: >= 1.12
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012 Irene Knapp
author: Irene Knapp <ireney.knapp@gmail.com>
maintainer: ireney.knapp@gmail.com
homepage: http://ireneknapp.com/software/
bug-reports: http://ireneknapp.com/issues/create/
category: Data
synopsis: Types for Modern Computing
description:

Source-Repository head
  type: darcs
  location: http://ireneknapp.com/software/darcs/TMC/

Library
  exposed-modules: Data.Modern
  build-depends: base >= 4.1 && < 5,
                 array >= 0.3.0.0 && < 1,
                 bytestring >= 0.9.1.5 && < 1,
                 containers >= 0.4.1.0 && < 1,
                 utf8-string >= 0.3.6 && < 1,
                 mtl >= 2.0.1.0 && < 3,
                 Murmur3 >= 1.0 && < 2
  default-language: Haskell2010
