name: modern-data
version: 1.0
cabal-version: >= 1.12
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012 Irene Knapp
author: Irene Knapp <irene.knapp@icloud.com>
maintainer: irene.knapp@icloud.com
homepage: http://ireneknapp.com/software/
bug-reports: https://github.com/IreneKnapp/modern-data/issues
category: Data
synopsis: Efficient binary self-describing data with parametric types
description:

Source-Repository head
  type: git
  location: https://github.com/IreneKnapp/modern-data.git

Library
  exposed-modules: Data.Modern
  build-depends: base >= 4.1 && < 5,
                 array >= 0.3.0.0 && < 1,
                 bytestring >= 0.9.1.5 && < 1,
                 containers >= 0.4.1.0 && < 1,
                 direct-binary-files >= 1.0 && < 2,
                 direct-murmur-hash >= 1.0 && < 2,
                 text >= 0.11.2.3 && < 1,
                 mtl >= 2.0.1.0 && < 3
  default-language: Haskell2010


Executable test
  main-is: Main.hs
  other-modules: Data.Modern
  build-depends: base >= 4.1 && < 5,
                 array >= 0.3.0.0 && < 1,
                 bytestring >= 0.9.1.5 && < 1,
                 containers >= 0.4.1.0 && < 1,
                 direct-binary-files >= 1.0 && < 2,
                 direct-murmur-hash >= 1.0 && < 2,
                 text >= 0.11.2.3 && < 1,
                 mtl >= 2.0.1.0 && < 3
  default-language: Haskell2010

