name: docgen
version: 1.0
build-type: Simple
cabal-version: >= 1.10

data-files: Data/handlebars.js,
            Data/index.css,
            Data/index.html,
            Data/index.js

Executable docgen
  main-is: Main.hs
  other-modules: Paths_docgen
  hs-source-dirs: Haskell
  build-depends: aeson >= 0.6 && < 1,
                 base >= 4.1 && < 5,
                 bytestring >= 0.9 && < 1,
                 containers >= 0.4.2.1 && < 1,
                 directory >= 1.1.0.2 && < 2,
                 direct-murmur-hash >= 1.0 && < 2,
                 direct-rich-text-format >= 1.0 && < 2,
                 filepath >= 1.3.0.0 && < 2,
                 text >= 0.11 && < 1,
                 xml-conduit >= 1.0.1 && < 2,
                 mtl >= 2.1 && < 3
  default-language: Haskell2010
